--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,3 +2,35 @@ en:
   home: "Home"
   intro: "Introduction"
   letter_spring: "Letter Spring"
+  about_us: "About Us"
+  organizational_structure: "Organizational Structure"
+  finance: "Finance"
+  achievements: "Achievements"
+  construction: "Construction"
+  completed_construction_works: "Completed Construction Works"
+  implementing_construction_works: "Implementing Construction Works"
+  investment_projects: "Investment Projects"
+  equipment: "Equipment"
+  notification: "Notification"
+  news: "News"
+  specialized_news: "Specialized News"
+  vietren_news: "Vietren News"
+  gallery: "Gallery"
+  investment_projects: "Investment Projects"
+  construction_works: "Construction Works"
+  recruitment: "Recruitment"
+  contact: "Contact"
+  contact_us: "Contact Us"
+  company_name: "VietRen Joint Stock Company"
+  company_profile: "VIETREN JOINT STOCK COMPANY PROFILE"
+  company_address: "242 Highway 9, Dong Ha City, Quang Tri Provine"
+  menu: "Menu"
+  departments: "Departments"
+  department_of_accounting_finance: "Department of Accounting - Finance"
+  technical_department: "Technical Department"
+  department_of_organization: "Department of Organization"
+  department_of_planning_general_affairs: "Department of Planning, General Affairs"
+  lastest_news: "Lastest News"
+  constructions: "Constructions"
+  all: "All"
+  certificates_images: "Certificates Images"
