--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,7 +18,7 @@ en:
   gallery: "Gallery"
   investment_projects: "Investment Projects"
   construction_works: "Construction Works"
-  recruitment: "Recruitment"
+  recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
   company_name: "VietRen Joint Stock Company"
@@ -48,3 +48,12 @@ en:
                         - Investment and trading electrical and water works.<br/>
                         - Investment and trading domestic and foreign minerals."
   home_production_detail: "- Production of building materials since 2000."
+  completed_construction_name: "Name"
+  completed_construction_total_value: "The total value of the contract" 
+  completed_construction_cost_performance: "The value performed by contractors"
+  completed_construction_duration: "Duration of the contract"
+  completed_construction_start_at: "Start"
+  completed_construction_end_at: "End"
+  completed_construction_name_company: "Names of the agencies implementing contract"
+  completed_construction_name_country: "Country"
+  somes_picture_of_construction: "SOME PICTURES OF CONSTRUCTION"
