--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,8 +16,8 @@ en:
   specialized_news: "Specialized News"
   vietren_news: "Vietren News"
   gallery: "Gallery"
-  investment_projects: "Investment Projects"
-  construction_works: "Construction Works"
+  picture_investment_projects: "Investment Projects"
+  picture_construction_works: "Construction Works"
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
@@ -57,3 +57,4 @@ en:
   completed_construction_name_company: "Names of the agencies implementing contract"
   completed_construction_name_country: "Country"
   somes_picture_of_construction: "SOME PICTURES OF CONSTRUCTION"
+  all_construction: "All Construction"
