--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -16,8 +16,8 @@ vi:
   specialized_news: "Tin chuyên ngành"
   vietren_news: "Tin Việt Ren"
   gallery: "Thư viện ảnh"
-  investment_projects: "Hình ảnh về dự án đầu tư"
-  construction_works: "Hình ảnh các công trình đang thi công"
+  picture_investment_projects: "Hình ảnh về dự án đầu tư"
+  picture_construction_works: "Hình ảnh các công trình đang thi công"
   recruitment: "Tuyển dụng"
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
@@ -57,3 +57,4 @@ vi:
   completed_construction_name_company: "Tên cơ quan thực hiện"
   completed_construction_name_country: "Tên nước"
   somes_picture_of_construction: "MỘT SỐ HÌNH ẢNH THI CÔNG CÔNG TRÌNH"
+  all_construction: "Tất cả dự án"
