--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,23 @@
 en:
   home: "Home"
   intro: "Introduction"
-  letter_spring: "Letter Spring"
+  letter_spring: "Spring Letter"
   about_us: "About Us"
   organizational_structure: "Organizational Structure"
   finance: "Finance"
   achievements: "Achievements"
   construction: "Construction"
-  completed_construction_works: "Completed Construction Works"
-  implementing_construction_works: "Implementing Construction Works"
+  completed_construction_works: "Completed Construction Projects"
+  implementing_construction_works: "Projects Under Construction"
   investment_projects: "Investment Projects"
-  equipment: "Equipment"
+  equipment: "Technical Equipment"
   notification: "Notification"
   news: "News"
   specialized_news: "Specialized News"
   vietren_news: "Vietren News"
   gallery: "Gallery"
   picture_investment_projects: "Investment Projects"
-  picture_construction_works: "Construction Works"
+  picture_construction_works: "Projects Under Construction"
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
@@ -26,10 +26,10 @@ en:
   company_address: "242 Highway 9, Dong Ha City, Quang Tri Provine"
   menu: "Menu"
   departments: "Departments"
-  department_of_accounting_finance: "Department of Accounting - Finance"
+  department_of_accounting_finance: "Accounting - Finance Department"
   technical_department: "Technical Department"
-  department_of_organization: "Department of Organization"
-  department_of_planning_general_affairs: "Department of Planning, General Affairs"
+  department_of_organization: "Administration department"
+  department_of_planning_general_affairs: "General Planning Department"
   lastest_news: "Lastest News"
   constructions: "Constructions"
   all: "All"
@@ -49,8 +49,8 @@ en:
                         - Investment and trading domestic and foreign minerals."
   home_production_detail: "- Production of building materials since 2000."
   completed_construction_name: "Name"
-  completed_construction_total_value: "The total value of the contract" 
-  completed_construction_cost_performance: "The value performed by contractors"
+  completed_construction_total_value: "Total value of the contract" 
+  completed_construction_cost_performance: "The value of construction works performed by contractors"
   completed_construction_duration: "Duration of the contract"
   completed_construction_start_at: "Start"
   completed_construction_end_at: "End"
