--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,8 +16,9 @@ en:
   specialized_news: "Specialized News"
   vietren_news: "Vietren News"
   gallery: "Gallery"
-  picture_investment_projects: "Investment Projects"
-  picture_construction_works: "Projects Under Construction"
+  pictures_completed_construction_works: "Pictures Of Completed Construction Works"
+  pictures_construction_works: "Pictures Of Projects Under Construction"
+  pictures_investment_projects: "Pictures Of Investment Projects"
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
