--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -16,8 +16,9 @@ vi:
   specialized_news: "Tin chuyên ngành"
   vietren_news: "Tin Việt Ren"
   gallery: "Thư viện ảnh"
-  picture_investment_projects: "Hình ảnh về dự án đầu tư"
-  picture_construction_works: "Hình ảnh các công trình đang thi công"
+  pictures_completed_construction_works: "Hình ảnh các công trình đã hoàn thành"
+  pictures_construction_works: "Hình ảnh các công trình đang thi công"
+  pictures_investment_projects: "Hình ảnh các dự án công ty đầu tư"
   recruitment: "Tuyển dụng"
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
