--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,3 +59,17 @@ en:
   completed_construction_name_country: "Country"
   somes_picture_of_construction: "SOME PICTURES OF CONSTRUCTION"
   all_construction: "All Construction"
+  currency_exchange_rates: "Exchange Rates - Gold Price"
+  currency: "Gold Price"
+  exchange_rates: "Exchange Rates"
+  currency_code: "Currency Code"
+  currency_name: "Currency Name"
+  buy: "Buy"
+  transfer: "Transfer"
+  sell: "Sell"
+  source: "Source: "
+  updated: "Updated: "
+  unit: "Unit: "
+  gold_type: "Type"
+  gold_buy: "Buy"
+  gold_sell: "Sell"
