--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -59,3 +59,17 @@ vi:
   completed_construction_name_country: "Tên nước"
   somes_picture_of_construction: "MỘT SỐ HÌNH ẢNH THI CÔNG CÔNG TRÌNH"
   all_construction: "Tất cả dự án"
+  currency_exchange_rates: "Tỷ giá ngoại tệ - Tỷ giá vàng"
+  currency: "Tỷ giá vàng"
+  exchange_rates: "Tỷ giá ngoại tệ"
+  currency_code: "Mã NT"
+  currency_name: "Tên ngoại tệ"
+  buy: "Mua tiền mặt"
+  transfer: "Mua chuyển khoản"
+  sell: "Bán"
+  source: "Nguồn: "
+  updated: "Cập nhật vào lúc: "
+  unit: "Đơn vị: "
+  gold_type: "Loại"
+  gold_buy: "Mua"
+  gold_sell: "Bán"
