--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,3 +73,9 @@ en:
   gold_type: "Type"
   gold_buy: "Buy"
   gold_sell: "Sell"
+  contact_name : "Name (Require)"
+  contact_email: "Email (Require)"
+  contact_subject: "Subject (Require)"
+  contact_message: "Message (Require)"
+  contact_send: "Send"
+  contact_notification: "Message send successfully."
