--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -73,3 +73,9 @@ vi:
   gold_type: "Loại"
   gold_buy: "Mua"
   gold_sell: "Bán"
+  contact_name: "Họ & Tên (Bắt buộc)"
+  contact_email: "Địa chỉ email (Bắt buộc)"
+  contact_subject: "Tiêu đề (Bắt buộc)"
+  contact_message: "Nội dung (Bắt buộc)"
+  contact_send: "Gửi liên hệ"
+  contact_notification: "Tin nhắn được gửi thành công."
