--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,7 @@ en:
   pictures_completed_construction_works: "Pictures Of Completed Construction Works"
   pictures_construction_works: "Pictures Of Projects Under Construction"
   pictures_investment_projects: "Pictures Of Investment Projects"
+  pictures_equipment: "Picturers of Equipment"
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
