--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -19,6 +19,7 @@ vi:
   pictures_completed_construction_works: "Hình ảnh các công trình đã hoàn thành"
   pictures_construction_works: "Hình ảnh các công trình đang thi công"
   pictures_investment_projects: "Hình ảnh các dự án công ty đầu tư"
+  pictures_equipment: "Hình ảnh các thiết bị"
   recruitment: "Tuyển dụng"
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
