--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,3 +80,4 @@ en:
   contact_message: "Message (Require)"
   contact_send: "Send"
   contact_notification: "Message send successfully."
+  home_company: "VIETREN Joint Stock Company"
