--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -80,3 +80,4 @@ vi:
   contact_message: "Nội dung (Bắt buộc)"
   contact_send: "Gửi liên hệ"
   contact_notification: "Tin nhắn được gửi thành công."
+  home_company: "Công Ty Cổ Phần VIỆT REN"
