--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,7 @@ en:
   pictures_completed_construction_works: "Pictures Of Completed Construction Works"
   pictures_construction_works: "Pictures Of Projects Under Construction"
   pictures_investment_projects: "Pictures Of Investment Projects"
-  pictures_equipment: "Picturers of Equipment"
+  pictures_equipment: "Construction Equipment photos"
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
@@ -80,4 +80,4 @@ en:
   contact_message: "Message (Require)"
   contact_send: "Send"
   contact_notification: "Message send successfully."
-  home_company: "VIETREN Joint Stock Company"
+  home_company: "VIETREN JOINT STOCK COMPANY"
