--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -19,7 +19,7 @@ vi:
   pictures_completed_construction_works: "Hình ảnh các công trình đã hoàn thành"
   pictures_construction_works: "Hình ảnh các công trình đang thi công"
   pictures_investment_projects: "Hình ảnh các dự án công ty đầu tư"
-  pictures_equipment: "Hình ảnh các thiết bị"
+  pictures_equipment: "Hình ảnh thiết bị - công trình"
   recruitment: "Tuyển dụng"
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
@@ -80,4 +80,4 @@ vi:
   contact_message: "Nội dung (Bắt buộc)"
   contact_send: "Gửi liên hệ"
   contact_notification: "Tin nhắn được gửi thành công."
-  home_company: "Công Ty Cổ Phần VIỆT REN"
+  home_company: "CÔNG TY CỔ PHẦN VIỆT REN"
