update company name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,7 @@ en:
   recruitment: "Career"
   contact: "Contact"
   contact_us: "Contact Us"
-  company_name: "VietRen Joint Stock Company"
+  company_name: "VIETREN JOINT STOCK COMPANY"
   company_profile: "VIETREN JOINT STOCK COMPANY PROFILE"
   company_address: "242 Highway 9, Dong Ha City, Quang Tri Provine"
   menu: "Menu"
