--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -23,7 +23,7 @@ vi:
   recruitment: "Tuyển dụng"
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
-  company_name: "Công Ty Cổ Phần Việt Ren"
+  company_name: "CÔNG TY CỔ PHẦN VIỆT REN"
   company_profile: "HỒ SƠ NĂNG LỰC CÔNG TY CỔ PHẦN VIỆT REN"
   company_address: "242 Quốc lộ 9, Đông Hà, Quảng Trị"
   menu: "Mục lục"
