--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -25,7 +25,7 @@ vi:
   contact_us: "Liên hệ với chúng tôi"
   company_name: "CÔNG TY CỔ PHẦN VIỆT REN"
   company_profile: "HỒ SƠ NĂNG LỰC CÔNG TY CỔ PHẦN VIỆT REN"
-  company_address: "242 Quốc lộ 9, Đông Hà, Quảng Trị"
+  company_address: "242 Quốc lộ 9, TP. Đông Hà, Tỉnh Quảng Trị"
   menu: "Mục lục"
   departments: "Phòng ban"
   department_of_accounting_finance: "Kế toán - Tài chính"
