--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
   contact: "Contact"
   contact_us: "Contact Us"
   company_name: "VIETREN JOINT STOCK COMPANY"
+  company_name_footer: "VietRen Joint Stock Company"
   company_profile: "VIETREN JOINT STOCK COMPANY PROFILE"
   company_address: "242 Highway 9, Dong Ha City, Quang Tri Provine"
   menu: "Menu"
