--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -24,6 +24,7 @@ vi:
   contact: "Liên hệ"
   contact_us: "Liên hệ với chúng tôi"
   company_name: "CÔNG TY CỔ PHẦN VIỆT REN"
+  company_name_footer: "Công Ty Cổ Phần Việt Ren"
   company_profile: "HỒ SƠ NĂNG LỰC CÔNG TY CỔ PHẦN VIỆT REN"
   company_address: "242 Quốc lộ 9, TP. Đông Hà, Tỉnh Quảng Trị"
   menu: "Mục lục"
