--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -75,6 +75,7 @@ vi:
   gold_type: "Loại"
   gold_buy: "Mua"
   gold_sell: "Bán"
+  read_more: "Đọc tiếp"
   contact_name: "Họ & Tên (Bắt buộc)"
   contact_email: "Địa chỉ email (Bắt buộc)"
   contact_subject: "Tiêu đề (Bắt buộc)"
